--- a/src/styles/CreateTask.css
+++ b/src/styles/CreateTask.css
@@ -45,7 +45,7 @@
 
 .taskButton {
   padding: 10px 0;
-  background-color: #3d77a5;
+  background-color: #4780b9;
   border: none;
   box-shadow: 5px 9px 15px -5px #777777;
   color: white;
