--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,7 +3,7 @@ nav {
   justify-content: center;
   align-items: center;
   height: 50px;
-  background-color: rgb(209, 154, 72);
+  background-color: #384d68;
   gap: 45px;
 }
 
