--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -1,30 +1,19 @@
-.completePage {
+.loginPage {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 90vh;
 }
 
-.messageContainer {
+.loginContainer {
   background-color: white;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 500px;
+  height: 450px;
   width: 500px;
-  gap: 40px;
+  gap: 15px;
   padding: 0px 40px;
   box-shadow: 5px 9px 15px -5px #777777;
-}
-
-.message {
-  display: flex;
-  justify-content: center;
-  font-size: 25px;
-}
-
-.btn {
-  display: flex;
-  justify-content: center;
 }
