--- a/src/styles/Signup.css
+++ b/src/styles/Signup.css
@@ -1,11 +1,11 @@
-.completePage {
+.signupPage {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 90vh;
 }
 
-.messageContainer {
+.signupContainer {
   background-color: white;
   border-radius: 10px;
   display: flex;
@@ -13,18 +13,7 @@
   justify-content: center;
   height: 500px;
   width: 500px;
-  gap: 40px;
+  gap: 15px;
   padding: 0px 40px;
   box-shadow: 5px 9px 15px -5px #777777;
-}
-
-.message {
-  display: flex;
-  justify-content: center;
-  font-size: 25px;
-}
-
-.btn {
-  display: flex;
-  justify-content: center;
 }
