--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -4,3 +4,10 @@
   /* align-items: center; */
   height: 90vh;
 }
+
+.no {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
+}
